# paragliding-calendar

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  bun.nix  dhvgelaende_dhvxml_de.xml  dhvgelaende_dhvxml_mt.xml  flake.nix  load_env.sh  module.nix  package.json  package.nix  rustfmt.toml  shell.nix
config/: default.toml
docs/: 01_calender_feature.md  02_architecture.md  03_possible_faq.md  architecture.md  prd.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  2.1.story.md  2.2.story.md  2.3.story.md
frontend/: bunfig.toml  index.html  package-lock.json  package.json  test-setup.ts  tsconfig.json  vite.config.js
frontend/src/: App.test.tsx  App.tsx  cesium-setup.ts  frontend.tsx  index.ts
frontend/src/components/: CompassRose.test.tsx  CompassRose.tsx  FileUploader.css  FileUploader.test.tsx  FileUploader.tsx  FilterPanel.module.css  FilterPanel.test.tsx  FilterPanel.tsx  FlightAnalysisCard.module.css  FlightAnalysisCard.test.tsx  FlightAnalysisCard.tsx  FlightMap.test.tsx  FlightMap.tsx  FlightUploader.module.css  FlightUploader.test.tsx  FlightUploader.tsx  Header.module.css  Header.tsx  LandingEditor.module.css  LandingEditor.test.tsx  LandingEditor.tsx  LaunchEditor.module.css  LaunchEditor.test.tsx  LaunchEditor.tsx  Legend.test.tsx  Legend.tsx  LocationPicker.module.css  LocationPicker.test.tsx  LocationPicker.tsx  SettingsModal.module.css  SettingsModal.test.tsx  SettingsModal.tsx  SiteEditor.module.css  SiteEditor.test.tsx  SiteEditor.tsx  SitesMap.module.css  SitesMap.test.tsx  SitesMap.tsx
frontend/src/config/: api.test.ts  api.ts
frontend/src/hooks/: useCalendarRefresh.ts  useDecisionGraph.ts  useFileDragDrop.test.tsx  useFileDragDrop.ts  useFlightAnalytics.test.tsx  useFlightAnalytics.ts  useSettings.test.tsx  useSettings.ts  useSiteImport.test.tsx  useSiteImport.ts  useSites.test.tsx  useSites.ts  useUpdateSite.test.tsx  useUpdateSite.ts  useWeatherModels.test.tsx  useWeatherModels.ts
frontend/src/styles/: App.css  App.module.css
frontend/src/test/: setup.ts  (+1 more)
src/: api.rs  app_state.rs  cache.rs  config.rs  database.rs  email.rs  error.rs  lib.rs  location_resolver.rs  main.rs  models.rs  paragliding.rs  paragliding_forecast.rs  routing.rs  store.rs  telemetry.rs  weather.rs  web.rs  wind_analysis.rs
src/adapters/: cache.rs  email.rs  google_calendar.rs  graphhopper.rs  http.rs  mod.rs  open_meteo.rs  store.rs
src/api/: mod.rs
src/application/: calendar_job.rs  flight_analytics.rs  mod.rs  paragliding_calendar_service.rs  planner.rs
src/auth/: mod.rs  web_flow_authenticator.rs
src/calendar/: google.rs  mod.rs  web_flow_authenticator.rs
src/calender/: google.rs  google_backend.rs  mod.rs  web_flow_authenticator.rs
src/domain/: activities.rs  calendar.rs  location.rs  mod.rs  ports.rs  shared.rs  weather.rs
src/location/: mod.rs  open_meteo.rs
src/models/: forecast.rs  location.rs  mod.rs  paragliding_site.rs  weather.rs
src/paragliding/: cache.rs  database.rs  decision_graph.rs  dhv.rs  error.rs  flyable_decision_graph.json  forecast.rs  mod.rs  paragliding_earth.rs  repository.rs  site_evaluator.rs  site_loader.rs  sites.rs  source.rs  wind_analysis.rs
src/weather/: mod.rs  open_meteo.rs
tests/: integration_tests.rs
(+19 files in other folders)
