[package]
name = "travelai"
version = "0.1.0"
edition = "2024"
authors = ["TravelAI Team"]
description = "Intelligent paragliding and outdoor adventure travel planning CLI"
license = "MIT"

[dependencies]

# general

anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
chrono = {version ="0.4", features = ["serde"]}

# weather
reqwest = {version = "0.12", features = ["blocking", "json"]}
urlencoding = "2.1"
sunrise = "2.1"

# geo
haversine = "0.2"
