[package]
name = "travelai"
version = "0.1.0"
edition = "2024"
authors = ["TravelAI Team"]
description = "Intelligent paragliding and outdoor adventure travel planning CLI"
license = "MIT"

[dependencies]

# general

anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.39", features = ["serialize"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
futures = "0.3"
async-trait = "0.1"
chrono = {version ="0.4", features = ["serde"]}
rand = "0.10"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version =  "0.3", features = ["env-filter"]}

# rule engine
zen-engine = "0.53"

# cache
postcard = {version="1.1", features = ["use-std"]}
fjall = "3.0"

# integrations
google-calendar3 = "7.0"
yup-oauth2 = { version = "12.0", features = ["hyper-rustls"] }
chrono-tz = "0.10"
hyper-util = { version = "0.1", features = ["client"] }
hyper-rustls = "0.27"
hyper = "1.8"
http-body-util = "0.1"
rustls = { version = "0.23.36", features = ["ring"] }

# weather
reqwest = {version = "0.13", features = [ "json"]}
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
urlencoding = "2.1"
sunrise = "3.0"

# geo
haversine = "0.2"

#dev 
rstest = "0.26"

# web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# email - using rustls instead of native-tls to avoid openssl dependency
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }
